--- a/Kiosco.Servicio/Kiosco.Servicio.csproj
+++ b/Kiosco.Servicio/Kiosco.Servicio.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Kiosco.Datos\Kiosco.Datos.csproj" />
+    <ProjectReference Include="..\Kiosco.Entidades\Kiosco.Entidades.csproj" />
+  </ItemGroup>
+
 </Project>
