--- a/Kiosco.WindowsForm/Kiosco.WindowsForm.csproj
+++ b/Kiosco.WindowsForm/Kiosco.WindowsForm.csproj
@@ -8,4 +8,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Kiosco.Datos\Kiosco.Datos.csproj" />
+    <ProjectReference Include="..\Kiosco.Entidades\Kiosco.Entidades.csproj" />
+  </ItemGroup>
+
 </Project>
